fix(ci): fix workflow validation errors
- Remove reference to non-existent release_analytics job
- Replace empty string with 'N/A' for release_metrics_url output
- Update lint-staged to include YAML files for future commits

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,7 +111,7 @@ on:
         value: ${{ jobs.release_init.outputs.correlation_id }}
       release_metrics_url:
         description: 'URL to release metrics dashboard'
-        value: ${{ jobs.release_analytics.outputs.dashboard_url }}
+        value: 'N/A'
       signed:
         description: 'Whether the release was signed'
         value: ${{ jobs.release_signing.outputs.signed }}
