--- a/src/templates/.github/workflows/release.yml
+++ b/src/templates/.github/workflows/release.yml
@@ -111,7 +111,7 @@ on:
         value: ${{ jobs.release_init.outputs.correlation_id }}
       release_metrics_url:
         description: 'URL to release metrics dashboard'
-        value: ${{ jobs.release_analytics.outputs.dashboard_url }}
+        value: 'N/A'
       signed:
         description: 'Whether the release was signed'
         value: ${{ jobs.release_signing.outputs.signed }}
