--- a/src/templates/.github/workflows/release.yml
+++ b/src/templates/.github/workflows/release.yml
@@ -644,7 +644,7 @@ jobs:
           gpg --list-secret-keys
 
           # Configure git
-          git config --global user.signingkey "${{ secrets.SIGNING_KEY_ID || secrets.RELEASE_SIGNING_KEY_ID }}"
+          git config --global user.signingkey "${{ secrets.SIGNING_KEY_ID || 'release-bot' }}"
           git config --global commit.gpgsign true
           git config --global tag.gpgsign true
 
@@ -661,7 +661,7 @@ jobs:
             if [ -f "$file" ]; then
               # Create detached signature
               gpg --armor --detach-sign \
-                --local-user "${{ secrets.SIGNING_KEY_ID || secrets.RELEASE_SIGNING_KEY_ID }}" \
+                --local-user "${{ secrets.SIGNING_KEY_ID || 'release-bot' }}" \
                 --output "$sig_file" \
                 "$file"
 
@@ -766,7 +766,7 @@ jobs:
   # Release attestation
   release_attestation:
     name: 📜 Release Attestation
-    needs: [release_init, version, quality, release_signing]
+    needs: [release_init, version, quality, release_approval, release_signing]
     if: always() && !cancelled() && needs.version.result == 'success'
     runs-on: ubuntu-latest
     outputs:
@@ -1252,6 +1252,7 @@ jobs:
         release_init,
         version,
         quality,
+        release_approval,
         release_signing,
         release_attestation,
         github_release,
