--- a/src/templates/.github/workflows/release.yml
+++ b/src/templates/.github/workflows/release.yml
@@ -111,7 +111,7 @@ on:
         value: ${{ jobs.release_init.outputs.correlation_id }}
       release_metrics_url:
         description: 'URL to release metrics dashboard'
-        value: 'N/A'
+        value: ${{ jobs.release_analytics.outputs.dashboard_url }}
       signed:
         description: 'Whether the release was signed'
         value: ${{ jobs.release_signing.outputs.signed }}
@@ -467,12 +467,6 @@ jobs:
 
           export VERSION TAG="v$VERSION"
 
-          # Update package.json with new version
-          if [ -f package.json ]; then
-            npm version $VERSION --no-git-tag-version --allow-same-version
-            echo "Updated package.json to version $VERSION"
-          fi
-
           log_release_event "version_determination" "completed" "Version determined successfully" \
             "version" "$VERSION" \
             "bump_type" "${BUMP_TYPE:-custom}"
@@ -644,7 +638,7 @@ jobs:
           gpg --list-secret-keys
 
           # Configure git
-          git config --global user.signingkey "${{ secrets.SIGNING_KEY_ID || 'release-bot' }}"
+          git config --global user.signingkey "${{ secrets.SIGNING_KEY_ID || secrets.RELEASE_SIGNING_KEY_ID }}"
           git config --global commit.gpgsign true
           git config --global tag.gpgsign true
 
@@ -661,7 +655,7 @@ jobs:
             if [ -f "$file" ]; then
               # Create detached signature
               gpg --armor --detach-sign \
-                --local-user "${{ secrets.SIGNING_KEY_ID || 'release-bot' }}" \
+                --local-user "${{ secrets.SIGNING_KEY_ID || secrets.RELEASE_SIGNING_KEY_ID }}" \
                 --output "$sig_file" \
                 "$file"
 
@@ -766,7 +760,7 @@ jobs:
   # Release attestation
   release_attestation:
     name: 📜 Release Attestation
-    needs: [release_init, version, quality, release_approval, release_signing]
+    needs: [release_init, version, quality, release_signing]
     if: always() && !cancelled() && needs.version.result == 'success'
     runs-on: ubuntu-latest
     outputs:
@@ -1024,22 +1018,10 @@ jobs:
             -d "$RELEASE_DATA" \
             "https://api.github.com/repos/${{ github.repository }}/releases")
 
-          # Check if the request was successful
-          if echo "$RESPONSE" | jq -e '.message' > /dev/null 2>&1; then
-            echo "Error creating release: $(echo "$RESPONSE" | jq -r '.message')"
-            echo "Full response: $RESPONSE"
-            exit 1
-          fi
-
           # Extract release information
           echo "$RESPONSE" | jq -r '.html_url' > .release_url
           echo "$RESPONSE" | jq -r '.id' > .release_id
           echo "$RESPONSE" | jq -r '.upload_url' > .upload_url
-
-          # Verify the tag was created
-          echo "Release created successfully!"
-          echo "Release URL: $(cat .release_url)"
-          echo "Tag: ${{ needs.version.outputs.tag }}"
 
           echo "html_url=$(cat .release_url)" >> $GITHUB_OUTPUT
           echo "id=$(cat .release_id)" >> $GITHUB_OUTPUT
@@ -1204,7 +1186,6 @@ jobs:
     if: |
       always() &&
       (needs.version.result == 'success' || needs.version.result == 'skipped') &&
-      !cancelled() &&
       needs.checks_jira_setup.outputs.has_jira_setup == 'true'
     needs: [version, checks_jira_setup]
     outputs:
@@ -1252,7 +1233,6 @@ jobs:
         release_init,
         version,
         quality,
-        release_approval,
         release_signing,
         release_attestation,
         github_release,
@@ -1498,7 +1478,8 @@ jobs:
           1. Review the release at ${{ needs.github_release.outputs.release_url || 'GitHub Releases page' }}
           2. Verify signatures if applicable
           3. Review compliance report
-          4. Monitor deployment if applicable
+          4. Deploy using your deployment workflow
+          5. Run load tests if needed
           EOF
 
           # Set workflow status
